Changelog

April 20, 2022 -
  - Fixed Favicon
  - Added Changelog
  - Added Slope
  - Added a Github Release
April 21, 2022 -
  - Made a New Github Release